--- a/Olahdata.ipynb
+++ b/Olahdata.ipynb
@@ -156,11 +156,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4bd98765",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Path Gambar</th>\n",
+       "      <th>Nama File</th>\n",
+       "      <th>Jumlah Objek</th>\n",
+       "      <th>Kelas Unik</th>\n",
+       "      <th>Kelas Dominan</th>\n",
+       "      <th>Label YOLO Format</th>\n",
+       "      <th>Path Txt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Innova</td>\n",
+       "      <td>E:\\24_1_Juli_dataset\\2025-07-01_11-09-25\\CAMER...</td>\n",
+       "      <td>CAMERA_1.jpg</td>\n",
+       "      <td>26</td>\n",
+       "      <td>[0, 1, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>['10 0.571245 0.628367 0.02359 0.023232', '19 ...</td>\n",
+       "      <td>E:\\24_1_Juli_dataset\\2025-07-01_11-09-25\\CAMER...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Innova</td>\n",
+       "      <td>E:\\24_1_Juli_dataset\\2025-07-01_11-09-15\\CAMER...</td>\n",
+       "      <td>CAMERA_1.jpg</td>\n",
+       "      <td>26</td>\n",
+       "      <td>[0, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14...</td>\n",
+       "      <td>8</td>\n",
+       "      <td>['8 0.33911 0.672959 0.045347 0.082736', '19 0...</td>\n",
+       "      <td>E:\\24_1_Juli_dataset\\2025-07-01_11-09-15\\CAMER...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Innova</td>\n",
+       "      <td>E:\\24_1_Juli_dataset\\2025-07-01_11-09-02\\CAMER...</td>\n",
+       "      <td>CAMERA_1.jpg</td>\n",
+       "      <td>26</td>\n",
+       "      <td>[0, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>['10 0.574712 0.620015 0.023645 0.023736', '11...</td>\n",
+       "      <td>E:\\24_1_Juli_dataset\\2025-07-01_11-09-02\\CAMER...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Innova</td>\n",
+       "      <td>E:\\24_1_Juli_dataset\\2025-07-01_11-04-07\\CAMER...</td>\n",
+       "      <td>CAMERA_1.jpg</td>\n",
+       "      <td>26</td>\n",
+       "      <td>[0, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>['10 0.570696 0.62181 0.023453 0.023601', '26 ...</td>\n",
+       "      <td>E:\\24_1_Juli_dataset\\2025-07-01_11-04-07\\CAMER...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Innova</td>\n",
+       "      <td>E:\\24_1_Juli_dataset\\2025-07-01_10-44-06\\CAMER...</td>\n",
+       "      <td>CAMERA_1.jpg</td>\n",
+       "      <td>26</td>\n",
+       "      <td>[0, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14...</td>\n",
+       "      <td>20</td>\n",
+       "      <td>['20 0.356017 0.517338 0.023286 0.023362', '8 ...</td>\n",
+       "      <td>E:\\24_1_Juli_dataset\\2025-07-01_10-44-06\\CAMER...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Model                                        Path Gambar     Nama File  \\\n",
+       "0  Innova  E:\\24_1_Juli_dataset\\2025-07-01_11-09-25\\CAMER...  CAMERA_1.jpg   \n",
+       "1  Innova  E:\\24_1_Juli_dataset\\2025-07-01_11-09-15\\CAMER...  CAMERA_1.jpg   \n",
+       "2  Innova  E:\\24_1_Juli_dataset\\2025-07-01_11-09-02\\CAMER...  CAMERA_1.jpg   \n",
+       "3  Innova  E:\\24_1_Juli_dataset\\2025-07-01_11-04-07\\CAMER...  CAMERA_1.jpg   \n",
+       "4  Innova  E:\\24_1_Juli_dataset\\2025-07-01_10-44-06\\CAMER...  CAMERA_1.jpg   \n",
+       "\n",
+       "   Jumlah Objek                                         Kelas Unik  \\\n",
+       "0            26  [0, 1, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14...   \n",
+       "1            26  [0, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14...   \n",
+       "2            26  [0, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14...   \n",
+       "3            26  [0, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14...   \n",
+       "4            26  [0, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14...   \n",
+       "\n",
+       "   Kelas Dominan                                  Label YOLO Format  \\\n",
+       "0             10  ['10 0.571245 0.628367 0.02359 0.023232', '19 ...   \n",
+       "1              8  ['8 0.33911 0.672959 0.045347 0.082736', '19 0...   \n",
+       "2             10  ['10 0.574712 0.620015 0.023645 0.023736', '11...   \n",
+       "3             10  ['10 0.570696 0.62181 0.023453 0.023601', '26 ...   \n",
+       "4             20  ['20 0.356017 0.517338 0.023286 0.023362', '8 ...   \n",
+       "\n",
+       "                                            Path Txt  \n",
+       "0  E:\\24_1_Juli_dataset\\2025-07-01_11-09-25\\CAMER...  \n",
+       "1  E:\\24_1_Juli_dataset\\2025-07-01_11-09-15\\CAMER...  \n",
+       "2  E:\\24_1_Juli_dataset\\2025-07-01_11-09-02\\CAMER...  \n",
+       "3  E:\\24_1_Juli_dataset\\2025-07-01_11-04-07\\CAMER...  \n",
+       "4  E:\\24_1_Juli_dataset\\2025-07-01_10-44-06\\CAMER...  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"D:\\LearnPython\\Tools_labeler\\destination2.csv\")\n",
+    "df.head()\n"
+   ]
   }
  ],
  "metadata": {
